syntax = "proto3";

option csharp_namespace = "OrdersEvent";

package orders_candidates;

message CandidatesFoundEvent {

  string ask_id = 1;

  string bid_id = 2;
}