syntax = "proto3";

option csharp_namespace = "Transactions";

package transactions;

message TransactionEvent {
  
  repeated string ask_ids = 1;
  
  repeated string bid_ids = 2;
  
}